--- a/project1NC/css/style.css
+++ b/project1NC/css/style.css
@@ -1,3 +1,49 @@
-.hidden{
-    display: none;
+.hidden {
+  display: none;
+}
+html,
+body {
+  margin: 0 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+#login-form {
+  margin: 0 auto;
+  text-align: center;
+}
+#clock {
+  width: 500px;
+  margin: 200px auto 0px;
+  text-align: center;
+  color: rgba(255, 255, 255, 0.729);
+  font-size: 100px;
+  /* border: 3px solid; */
+  /* border-radius: 30px; */
+}
+#greeting {
+  text-align: center;
+  text-transform: capitalize;
+  color: rgba(255, 255, 255, 0.729);
+}
+#todo-list {
+  color: #fff;
+  list-style: none;
+  text-align: center;
+}
+#todo-form {
+  text-align: center;
+  margin: 10px auto;
+}
+#todo_write {
+  width: 400px;
+  height: 30px;
+  border-radius: 30px;
+  background-color: rgb(239, 184, 239);
+}
+
+#quote {
+  text-align: center;
+  font-weight: bold;
+  font-size: 30px;
 }
